source/blender/io/usd/intern/usd_utils.cc
@@ -43,6 +43,8 @@ std::string make_safe_name(const std::string &name, [[maybe_unused]] bool allow_
     first = false;
   }
 
+  /* Ensure the returned string is sized exactly to the number of required bytes. */
+  buf.resize(offset);
   return buf;
 #else
   return pxr::TfMakeValidIdentifier(name);
